<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#707070">

    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:background="#A8A8A8"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_want_to_delete_n_this_note"
        android:textColor="@color/white"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_no"
        android:text="@string/no"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_no"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_yes"
        android:text="@string/yes"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@drawable/btn_yes"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"/>



</LinearLayout>