<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back_color"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:id="@+id/linear"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/removeFilter"
                android:src="@drawable/baseline_filter_list_24"
                android:contentDescription="@string/filter_button"
                android:background="@drawable/btn_filter_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:id="@+id/filterHigh"
                android:background="@drawable/btn_filter_shape"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/splash_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:id="@+id/filterMedium"
                android:background="@drawable/btn_filter_shape"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/yellow_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:id="@+id/filterLow"
                android:background="@drawable/btn_filter_shape"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/green_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rcvAllNotes"
                />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddNotes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/baseline_add_24"
            android:layout_margin="26dp"
            android:backgroundTint="@color/splash_color"
            android:contentDescription="@string/add_notes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>